# specpart

./: pyproject.toml  run_benchmark.py
specpart_py/: Coarsen.py  EstimateClusteringMistakes.py  ExportHypergraph.py  FM.py  GenerateCoarseHypergraph.py  GenerateHyperedgesHash.py  HypergraphToIncidence.py  HypergraphToPairList.py  InitialPartitions.py  IterativeSpectral.py  PartitionILP.py  PartitionStructures.py  README.md  ReadFiles.py  SpectralRefinement.py  StructureDetection.py  TestScript.py  TestSupervisedSpectral.py  Uncoarsen.py  WriteClusters.py  __init__.py  pyspecpart.py
specpart_py/SpectralCommunityDetection/: AnalyzeSpectralCuts.py  BuildMetisGraph.py  Clustering.py  CombinePartitions.py  CutProfile.py  ExactRefine.py  GenTrees.py  GenerateEigenAwareGraph.py  GenerateHints.py  GenerateTwoPinHyperedges.py  HypergraphToGraph.py  Hyperstretch.py  IsolateIslands.py  IterativeMSTReconstruction.py  MSDR.py  Modified_Prims.py  PlotEmbedding.py  RecursiveCuts.py  SolveEigenVecs.py  SpectralCommunities.py  SpectralPartitioning.py  SweepCuts.py  TreeBipartition.py  TreeSweepUtilities.py  dBiClique.py  dCliques.py  hypL.py
specpart_py/SpectralCommunityDetection/cmg/src/: CombinatorialMultigrid.py  cmgAlg.py
specpart_py/SpectralCommunityDetection/cmg/test/: runtests.py
specpart_py/SpectralCommunityDetection/rmq/: EulerTour.py  NodeLevels.py  Queries.py  lca2rmq.py  rmq.py  rmq_solve.py
specpart_py/tests/: test_spectral.py
specpart_py/tests/data/: simple.hgr
