[tool.poetry]
name = "pyspecpart"
version = "0.1.0"
description = "Python utilities for the SpecPart hypergraph partitioning algorithms"
authors = ["SpecPart Contributors"]
readme = "specpart_py/README.md"
packages = [{include = "specpart_py"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
networkx = "*"
numpy = "*"
pymetis = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
